--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "# Steady-state computation in AMICI\n",
     "\n",
-    "In many studies, there is some information available regarding the system’s steady-state that needs to be taken into account during modeling process.\n",
+    "In many studies, there is some information available regarding the system’s steady state that needs to be taken into account during the modeling process.\n",
     "There are two distinct cases:\n",
     "\n",
     "1. the system is assumed to start in a steady state, then it is perturbed and enters a dynamic state;\n",
-    "2. the system is assumed to start in a dynamic state and after some time it reaches a steady state.\n",
+    "2. the system is assumed to start in a dynamic state, and after some time it reaches a steady state.\n",
     "\n",
-    "These two cases will be referred to as pre- and post-equilibration, respectively. The system can start in a steady state and reach a steady state again after a perturbation, therefore, the two cases are not mutually exclusive.\n",
+    "In AMICI, these two cases are referred to as pre- and post-equilibration, respectively. The system can start in a steady state and reach a steady state again after a perturbation, therefore, the two cases are not mutually exclusive.\n",
     "\n",
-    "![preeq_and_posteq.svg](figures/preeq_and_posteq.svg \"Simulation scenarious\")\n"
+    "![preeq_and_posteq.svg](figures/preeq_and_posteq.svg \"Simulation scenarios\")\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
     ">  * chaotic behaviour, e.g., the Lorentz attractor\n",
     ">\n",
     "\n",
-    "In this notebook we will discuss how one can perform pre- and post-equilibration using AMICI and compute sensitivites corresponding to the system’s steady state.\n",
+    "In this notebook, we will discuss how one can perform pre- and post-equilibration using AMICI and compute sensitivities corresponding to the system’s steady state.\n",
     "\n",
     "# Table of Contents\n",
     "* [The example model](#example_model)\n",
@@ -306,13 +306,13 @@
     "$$\n",
     "is fulfilled, where “rtol” and “atol” denote relative and absolute tolerances, respectively.\n",
     "\n",
-    "In general, the Newton's method is significantly faster than numerical integration. However, it will converge only if started close enough to the steady state. More about the convergence of the Newton's method and its implementation in AMICI can be found in [Lines et al. (2019)](https://doi.org/10.1016/j.ifacol.2019.12.232). Moreover, the Newton's method is only applicable if system's Jacobian is non-singular.\n",
+    "In general, Newton's method is significantly faster than numerical integration. However, it will converge only if it was started close enough to the steady state. More about the convergence of the Newton's method and its implementation in AMICI can be found in [Lines et al. (2019)](https://doi.org/10.1016/j.ifacol.2019.12.232). Moreover, the Newton's method is only applicable if the system's Jacobian is non-singular.\n",
     "\n",
     ">By default, the Newton's method is attempted first. If it fails, numerical integration is performed instead. If it fails as well, Newton's method is performed again starting from the final point of the numerical integration.\n",
     "\n",
     "Many parameters, such as maximum allowed number of steps for the Newton's method or numerical integration or values of tolerances, influence steady-state computation.\n",
     "\n",
-    "In the next section we will try applying Newton's method to the models with and without conserved quantities, demonstrate how to set relevant parameters and interpret the data returned by simulation."
+    "In the next section, we will try applying Newton's method to the models with and without conserved quantities, demonstrate how to set relevant parameters and interpret the data returned by simulation."
    ]
   },
   {
@@ -321,7 +321,7 @@
    "source": [
     "### Inferring the steady state of the system (post-equilibration) <a name=\"postequilibration\"></a>\n",
     "\n",
-    "In order to run post-equilibration one needs to add t=$\\infty$ to the list of timepoints. It can be the only timepoint or one can also set a number of finite timepoints.\n",
+    "In order to run post-equilibration, one needs to add t=$\\infty$ to the list of timepoints. It can be the only timepoint or one can also set a number of finite timepoints.\n",
     "First, we want to demonstrate that the Newton's method will fail with the unreduced model due to a singular right-hand side Jacobian."
    ]
   },
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, the same logic works, if we use the reduced model.\n",
+    "However, the same logic works if we use the reduced model.\n",
     "For sufficiently many Newton steps, post-equilibration is achieved by Newton's method in the first run. In this specific example, the steady state is found within one step."
    ]
   },
@@ -620,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pre-equilibration was successful and required 2 steps of the Newton's method. The steady state found during pre-equilibration is used as the initial state for the subsequent simulation, except the second entry, corresponding to the enzyme consentration. The reason is that the initial value for the enzyme consentration is defined by the second fixed parameter ('init_enzyme'). This parameter value is re-initialised after pre-equilibration and is set to 5.\n",
+    "Pre-equilibration was successful and required 2 steps of the Newton's method. The steady state found during pre-equilibration is used as the initial state for the subsequent simulation, except the second entry, corresponding to the enzyme concentration. The reason is that the initial value for the enzyme concentration is defined by the second fixed parameter ('init_enzyme'). This parameter value is re-initialised after pre-equilibration and is set to 5.\n",
     "\n",
     "We can also combine pre- and post-equilibration."
    ]
@@ -644,7 +644,7 @@
    "source": [
     "## Sensitivities computation at steady state <a name=\"steady-state_sensitivities\"></a>\n",
     "\n",
-    "In addition to model simulation, AMICI supports forward sensitivity analysis and adjoint sensitivity analysis for likelihood-based output functions, which is crucial for parameter estimation. Both sensitivity analysis approaches can be adapted to exploit steady-state constraints and to compute sensitivities by solving a linear system. In this section we consider these approaches, their applicability and available settings.\n",
+    "In addition to model simulation, AMICI supports forward sensitivity analysis and adjoint sensitivity analysis for likelihood-based output functions, which is crucial for parameter estimation. Both sensitivity analysis approaches can be adapted to exploit steady-state constraints and to compute sensitivities by solving a linear system. In this section, we consider these approaches, their applicability and available settings.\n",
     "\n",
     "![amici_logic_sensitivities_at_stst.svg](figures/amici_logic_sensitivities_at_stst.svg)\n",
     "\n",
@@ -659,23 +659,21 @@
     "1. One can integrate the state variables with state sensitivities until the norm of the right-hand side becomes small. This approach is numerically more stable, but the computation time for large models may be substantial.\n",
     "\n",
     "\n",
-    "2. The more efficient approach is to take into account the steady-state condition ($\\dot{x} = 0$), which allows to symplify the ODE system for state sentitivities into the linear system of equations: $$0 = \\left.\\dot{\\mathbf{s}}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} + \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}\\qquad \\Rightarrow \\qquad \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = - \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})},$$ where $\\mathbf{s}^x$ are the state sensitivies, $\\mathbf{f}$ - is the right-hand side of the model ODEs, $\\theta$ - model parameters and $\\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) = \\left.\\nabla_x \\mathbf{f}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}$ is the systems's Jacobian at steady state. However, this method is only applicable if the Jacobian is not (close to) singular.\n",
+    "2. The more efficient approach is to take into account the steady-state condition ($\\dot{x} = 0$), which allows to simplify the ODE system for state sensitivities into the linear system of equations: $$0 = \\left.\\dot{\\mathbf{s}}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} + \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}\\qquad \\Rightarrow \\qquad \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) \\left.\\mathbf{s}^x\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})} = - \\left.\\frac{\\partial \\mathbf{f}}{\\partial \\theta}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})},$$ where $\\mathbf{s}^x$ are the state sensitivities, $\\mathbf{f}$ - is the right-hand side of the model ODEs, $\\theta$ - model parameters and $\\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta}) = \\left.\\nabla_x \\mathbf{f}\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})}$ is the systems's Jacobian at steady state. However, this method is only applicable if the Jacobian is not (close to) singular.\n",
     "\n",
     "\n",
     "<!-- This approach will be chosen by AMICI, if the steady state was found by simulation and the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.simulationFSA`.  -->\n",
-    "This approach will always be chosen by AMICI, if the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.newtonOnly`. Furthermore, it will also be chosen, if the steady state was found by Newton's method, as in this case, the Jacobian is at least not singular (but may still be poorly conditioned).\n",
+    "This approach will always be chosen by AMICI, if the option `model.SteadyStateSensitivityMode` is set to `SteadyStateSensitivityMode.newtonOnly`. Furthermore, it will also be chosen if the steady state was found by Newton's method, as in this case, the Jacobian is at least not singular (but may still be poorly conditioned).\n",
     "<!--    A check for the condition number of the Jacobian is currently missing, but will soon be implemented. -->\n",
     "\n",
     "Side remark:\n",
-    "A possible third way may consist in a (relaxed) Richardson iteration type approach, which interprets the entries of the right hand side $f$ as residuals and minimizes the squared residuals $\\Vert f \\Vert^2$ by a Levenberg-Marquart-type algorithm. This approach would also work for poorly conditioned (and even for singular Jacobians if additional constraints are implemented as Lagrange multipliers) while being faster than a long forward simulation."
+    "A possible third way may consist in a (relaxed) Richardson iteration type approach, which interprets the entries of the right hand side $f$ as residuals and minimizes the squared residuals $\\Vert f \\Vert^2$ by a Levenberg-Marquardt-type algorithm. This approach would also work for poorly conditioned (and even for singular Jacobians if additional constraints are implemented as Lagrange multipliers) while being faster than a long forward simulation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We want to demonstrate both possibilities for steady-state sensitivities computation, as well as the failure of their computation if the Jacobian is singular and the `newtonOnly` setting was used."
-   ]
+   "source": "We want to demonstrate both possibilities for steady-state sensitivities computation, and the failure of their computation if the Jacobian is singular and the `newtonOnly` setting was used."
   },
   {
    "cell_type": "code",
@@ -737,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen from the `posteq_status`, the Newton's method didn't work, but the steady state and corresponding sensitivities were computed by numerical integration.\n",
+    "As can be seen from the `posteq_status`, Newton's method didn't work, but the steady state and corresponding sensitivities were computed by numerical integration.\n",
     "The shape of `rdata['sx']` is (number of timepoints) x (number of parameters) x (number of states)."
    ]
   },
@@ -802,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the model with singular Jacobian steady-state computation worked by numerical integration. However, for sensitivities comutation `amici.SteadyStateSensitivityMode.newtonOnly` approach was chosen which fails with singular Jacobian and the sensitivites could not be computed.\n",
+    "For the model with singular Jacobian steady-state computation worked by numerical integration. However, for sensitivities computation `amici.SteadyStateSensitivityMode.newtonOnly` approach was chosen which fails with singular Jacobian and the sensitivities could not be computed.\n",
     "We can try the same with the reduced model:"
    ]
   },
@@ -870,7 +868,7 @@
    "source": [
     "#### Post-equilibration with adjoint sensitivities\n",
     "\n",
-    "Post-equilibration also works with adjoint sensitivity analysis and, similar to forward sensitivites, two approaches are available for sensitivities computation at steady state:\n",
+    "Post-equilibration also works with adjoint sensitivity analysis and, similar to forward sensitivities, two approaches are available for sensitivities computation at steady state:\n",
     "\n",
     "1. Standard adjoint sensitivity analysis can be performed to compute objective function gradient. This approach requires backward numerical integration of the adjoint state ODE form the timepoint of the steady-state measurements $t=t''$ (practically, $t''$ = `posteq_t`, at this time point steady-state condition was satisfied) until the last finite timepoint ($t_{n_t}$). Ultimately, one needs to compute\n",
     "$$\n",
@@ -908,7 +906,7 @@
     "{\\partial \\theta_k}\n",
     "\\right\\vert_{\\mathbf{x} = \\mathbf{x}^*({\\theta})},\n",
     "$$\n",
-    "    where $t'$ is a time point such that $t_{n_t} \\ll t' \\ll t''$ and for $t \\geq t'$ the system  is at steady state. To obtain the integral one can solve the linear system of equations\n",
+    "    where $t'$ is a time point such that $t_{n_t} \\ll t' \\ll t''$ and for $t \\geq t'$ the system is at steady state. To obtain the integral one can solve the linear system of equations\n",
     "$$\n",
     "    \\mathbf{J}(\\mathbf{x}^*({\\theta}), {\\theta})^T \\mathbf{p}_{\\text{integral}} = -\\mathbf{p}(t'', {\\theta}).\n",
     "$$\n",
@@ -951,7 +949,7 @@
    "source": [
     "# Call post-equilibration and sensitivities computation using adjoint sensitivity analysis\n",
     "# by setting an infinity timepoint\n",
-    "# and createíng an edata object, which is needed for adjoint computation\n",
+    "# and creatíng an edata object, which is needed for adjoint computation\n",
     "edata = amici.ExpData(2, 0, 0, np.array([float(\"inf\")]))\n",
     "edata.setObservedData([1.8] * 2)\n",
     "edata.fixedParameters = np.array([3.0, 5.0])\n",
@@ -986,7 +984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we carry out the same computation with a system that has a singular Jacobian, then `posteq_numstepsB` will not be `0` any more (which indicates that the linear system solve was used to compute backward post-equilibration).\n",
+    "If we carry out the same computation with a system that has a singular Jacobian, then `posteq_numstepsB` will not be `0` anymore (which indicates that the linear system solve was used to compute backward post-equilibration).\n",
     "Now, integration is carried out and hence `posteq_numstepsB > 0`:"
    ]
   },
@@ -1081,7 +1079,7 @@
     }
    ],
    "source": [
-    "# No postquilibration this time.\n",
+    "# No post-equilibration this time.\n",
     "edata.setTimepoints(np.array([0.0, 0.1, 1.0]))\n",
     "\n",
     "# create the solver object and run the simulation, singular Jacobian, enforce Newton solver for sensitivities\n",
@@ -1121,7 +1119,7 @@
     }
    ],
    "source": [
-    "# Singluar Jacobian, use simulation\n",
+    "# Singular Jacobian, use simulation\n",
     "model.setSteadyStateSensitivityMode(\n",
     "    amici.SteadyStateSensitivityMode.integrateIfNewtonFails\n",
     ")\n",
@@ -1293,9 +1291,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "As for postquilibration, adjoint pre-equilibration has an analytic solution (via the linear system), which will be preferred. If used for models with singular Jacobian, numerical integration will be carried out, which is indicated by `preeq_numstepsB`."
-   ]
+   "source": "As for post-equilibration, adjoint pre-equilibration has an analytic solution (via the linear system), which will be preferred. If used for models with singular Jacobian, numerical integration will be carried out, which is indicated by `preeq_numstepsB`."
   },
   {
    "cell_type": "code",
@@ -1360,7 +1356,7 @@
    },
    "outputs": [],
    "source": [
-    "# Non-singular Jacobian, use simulaiton\n",
+    "# Non-singular Jacobian, use simulation\n",
     "model_reduced.setSteadyStateSensitivityMode(\n",
     "    amici.SteadyStateSensitivityMode.integrateIfNewtonFails\n",
     ")\n",
