fix merge / move

--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "We will use the example model `model_constant_species.xml`, which describes an enzymatic reaction\n",
     "\n",
-    "![catalized_reaction.svg](figures/catalized_reaction.svg)\n",
+    "![catalyzed_reaction.svg](figures/catalyzed_reaction.svg)\n",
     "\n",
     "The corresponding system of ODEs is\n",
     "\n",
