--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -6,13 +6,19 @@
    "source": [
     "# Steady-state computation in AMICI\n",
     "\n",
-    "In many studies, there is some information available regarding the system’s steady state that needs to be taken into account during the modeling process.\n",
-    "There are two distinct cases:\n",
+    "*This notebook demonstrates how to compute steady states and their sensitivities using AMICI. We explore pre- and post-equilibration scenarios, sensitivity analysis methods, and techniques for handling singular Jacobians.*\n",
+    "\n",
+    "Steady states play a crucial role in the analysis of dynamical systems, and their computation is a fundamental task in many applications, such as biochemical networks, control systems, and ecological models. A steady state is a condition where the system's state variables remain constant over time, meaning that their time derivatives are - and remain - zero. In mathematical terms, for a system described by ordinary differential equations (ODEs), a steady state $\\mathbf{x}^*$ satisfies the equation $\\dot{\\mathbf{x}} = \\mathbf{f}(\\mathbf{x}^*, \\theta) = 0$, where $\\mathbf{f}$ is the right-hand side of the ODEs and $\\theta$ represents model parameters.\n",
+    "\n",
+    "AMICI offers several methods for computing steady states and sensitivities at steady state using both forward and adjoint sensitivity analysis.\n",
+    "\n",
+    "Steady-state sensitivities are also important in the context of model calibration if the training data contains steady-state measurements and gradient-based optimization methods are used for parameter estimation.\n",
+    "Common experimental scenarios include:\n",
     "\n",
     "1. the system is assumed to start in a steady state, then it is perturbed and enters a dynamic state;\n",
     "2. the system is assumed to start in a dynamic state, and after some time it reaches a steady state.\n",
     "\n",
-    "In AMICI, these two cases are referred to as pre- and post-equilibration, respectively. The system can start in a steady state and reach a steady state again after a perturbation, therefore, the two cases are not mutually exclusive.\n",
+    "In AMICI, these two cases are referred to as **pre-equilibration** and **post-equilibration**, respectively. The system can start in a steady state and reach a steady state again after a perturbation, therefore, the two cases are not mutually exclusive.\n",
     "\n",
     "![preeq_and_posteq.svg](figures/preeq_and_posteq.svg \"Simulation scenarios\")\n"
    ]
@@ -1045,9 +1051,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (AMICI)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv_amici"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
