--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -506,8 +506,6 @@
     "\n",
     "In addition to model simulation, AMICI supports forward sensitivity analysis and adjoint sensitivity analysis for likelihood-based output functions, which is crucial for parameter estimation. Both sensitivity analysis approaches can be adapted to exploit steady-state constraints and to compute sensitivities by solving a linear system. In this section, we consider these approaches, their applicability and available settings.\n",
     "\n",
-    "![amici_logic_sensitivities_at_stst.svg](figures/amici_logic_sensitivities_at_stst.svg \"Steady-state sensitivity computation modes in AMICI\")\n",
-    "\n",
     "### Post-equilibration with sensitivities <a name=\"posteq_sensitivities\"></a>\n",
     "\n",
     "<!-- Equilibration is possible with forward and adjoint sensitivity analysis. As for the main simulation part, adjoint sensitivity analysis yields less information than forward sensitivity analysis, since no state sensitivities are computed. However, it has a better scaling behavior towards large model sizes. -->\n",
@@ -731,7 +729,7 @@
     "\n",
     "   However, this solution is given in terms of a linear system of equations defined by the transposed Jacobian of the right-hand side. Hence, if the (transposed) Jacobian is singular, it is not applicable. In this case, standard integration must be carried out.\n",
     "\n",
-    "![amici_logic_adjoint_sensitivities_at_stst.svg](figures/amici_logic_adjoint_sensitivities_at_stst.svg)\n",
+    "![amici_logic_adjoint_sensitivities_at_stst.svg](figures/amici_logic_adjoint_sensitivities_at_stst.svg \"Adjoint steady-state sensitivity computation modes in AMICI\")\n",
     "\n",
     "> **_NOTE:_** adjoint sensitivity analysis yields less information than forward sensitivity analysis, since state sensitivities are not computed. However, it has a better scaling behavior towards large model size."
    ]
