unsupported figure captions

--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "In AMICI, these two cases are referred to as **pre-equilibration** and **post-equilibration**, respectively. The system can start in a steady state and reach a steady state again after a perturbation, therefore, the two cases are not mutually exclusive.\n",
     "\n",
-    "![preeq_and_posteq.svg](figures/preeq_and_posteq.svg \"Simulation scenarios\")\n"
+    "![Simulation scenarios](figures/preeq_and_posteq.svg)\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "\n",
     "We will use the following model of an enzymatic reaction as example:\n",
     "\n",
-    "![catalyzed_reaction.svg](figures/catalyzed_reaction.svg)\n",
+    "![Model of an enzyme-catalyzed reaction](figures/catalyzed_reaction.svg)\n",
     "\n",
     "The corresponding system of ODEs is\n",
     "\n",
@@ -729,7 +729,7 @@
     "\n",
     "   However, this solution is given in terms of a linear system of equations defined by the transposed Jacobian of the right-hand side. Hence, if the (transposed) Jacobian is singular, it is not applicable. In this case, standard integration must be carried out.\n",
     "\n",
-    "![amici_logic_adjoint_sensitivities_at_stst.svg](figures/amici_logic_adjoint_sensitivities_at_stst.svg \"Adjoint steady-state sensitivity computation modes in AMICI\")\n",
+    "![Adjoint steady-state sensitivity computation modes in AMICI](figures/amici_logic_adjoint_sensitivities_at_stst.svg)\n",
     "\n",
     "> **_NOTE:_** adjoint sensitivity analysis yields less information than forward sensitivity analysis, since state sensitivities are not computed. However, it has a better scaling behavior towards large model size."
    ]
