quote under figure?

--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -731,7 +731,8 @@
     "\n",
     "![Adjoint steady-state sensitivity computation modes in AMICI](figures/amici_logic_adjoint_sensitivities_at_stst.svg)\n",
     "\n",
-    "> **_NOTE:_** adjoint sensitivity analysis yields less information than forward sensitivity analysis, since state sensitivities are not computed. However, it has a better scaling behavior towards large model size."
+    "**_NOTE:_** adjoint sensitivity analysis yields less information than forward sensitivity analysis,\n",
+    "since state sensitivities are not computed. However, it has a better scaling behavior towards large model size."
    ]
   },
   {
