--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -27,7 +27,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "> **_NOTE:_** Not every dynamical system needs to run into a steady state. Instead, it may exhibit:\n",
     ">\n",
     ">  * continuous growth, e.g., $$\\dot{x} = x, \\quad x_0 = 1$$\n",
@@ -35,17 +34,7 @@
     ">  * oscillations, e.g., $$\\ddot{x} = -x, \\quad x_0 = 1$$\n",
     ">  * chaotic behaviour, e.g., the Lorenz attractor\n",
     "\n",
-    "In this notebook, we will discuss how one can perform pre- and post-equilibration using AMICI and compute sensitivities corresponding to the system’s steady state.\n",
-    "\n",
-    "# Table of Contents\n",
-    "* [The example model](#example_model)\n",
-    "* [Steady-state computation](#steady-state_computation)\n",
-    "    * [Inferring the steady state of the system (post-equilibration)](#postequilibration)\n",
-    "    * [Pre-equilibrating the model](#preequilibration)\n",
-    "* [Sensitivities computation at steady state](#steady-state_sensitivities)\n",
-    "    * [Post-equilibration with sensitivities](#posteq_sensitivities)\n",
-    "    * [Pre-equilibration with sensitivities](#preeq_sensitivities)\n",
-    "* [Controlling the error tolerances in pre- and post-equilibration ](#error_tolerances)"
+    "In this notebook, we will discuss how one can perform pre- and post-equilibration using AMICI and compute sensitivities corresponding to the system’s steady state.\n"
    ]
   },
   {
